# fujinet-go-apple2

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  README.md  THIRD_PARTY_NOTICES.md  errata.md  settings.gradle.kts  zapstore.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  apple2_core.cpp  apple2_host.cpp  apple2_host.h  session_runtime.cpp  session_runtime.h
app/src/main/java/online/fujinet/go/apple2/: AudioOutput.kt  EmulatorSessionService.kt  MainActivity.kt  RuntimeInstaller.kt  SessionController.kt  Settings.kt
app/src/main/java/online/fujinet/go/apple2/core/: EmulatorNative.kt
app/src/main/java/online/fujinet/go/apple2/fujinet/: FujiNetWebViewActivity.kt
app/src/main/java/online/fujinet/go/apple2/input/: AppleInput.kt  GameControllerMapper.kt  HardwareKeyboard.kt
app/src/main/java/online/fujinet/go/apple2/ui/: AppleKeyboard.kt  EmulatorScreen.kt  EmulatorSurface.kt  FujiHaptics.kt  JoystickPad.kt  SettingsDialog.kt
app/src/main/java/online/fujinet/go/apple2/ui/theme/: Theme.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/online/fujinet/go/apple2/input/: AppleInputTest.kt  HardwareKeyboardTest.kt
tools/applewin/: build-applewin-core.sh
tools/fujinet/: build-fujinet.sh
tools/fujinet/support/: fujinet_android_entry.cpp
